test/sema/negative/return1.output
return1.impala:6 col 19 - 24: error: wrong  type; expected bool but found i32
